@@ -1,3 +1,12 @@
+Sun Jun  9 21:33:15 2013  Tanaka Akira  <akr@fsij.org>
+
+	* bignum.c (rb_absint_numwords): Return (size_t)-1 when overflow.
+	  Refine variable names.
+	  (rb_absint_size): Refine variable names.
+
+	* internal.h (rb_absint_size): Refine an argument name.
+	  (rb_absint_numwords): Ditto.
+
 Sun Jun  9 16:51:41 2013  Tanaka Akira  <akr@fsij.org>
 
 	* bignum.c (rb_absint_numwords): Renamed from rb_absint_size_in_word.
